<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/kyara_sakusei2"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:onClick="kyara_sakusei3"
        android:text="@string/kyara_sakusei"
        app:layout_constraintBottom_toTopOf="@+id/kyara_ichiran5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <Button
        android:id="@+id/kyara_ichiran5"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:onClick="kyara_ichiran2"
        android:text="@string/kyara_ichiran"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="132dp"
        android:layout_height="240dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:text="@string/hp"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:text="@string/mp"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:text="@string/str"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:text="@string/def"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:text="@string/agi"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:text="@string/luck"
            android:textSize="25sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/mName"
        android:layout_width="176dp"
        android:layout_height="51dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/mJob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/mJob"
        android:layout_width="170dp"
        android:layout_height="52dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/mState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/mState"
        android:layout_width="144dp"
        android:layout_height="32dp"
        android:gravity="center_horizontal"
        android:text="@string/state"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="103dp"
        android:layout_height="244dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/mHp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/mMp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/mStr"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/mDef"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/mAgi"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/mLuck"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="25sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
