<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="132dp"
        android:layout_height="240dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:text="@string/hp"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:text="@string/mp"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:text="@string/str"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:text="@string/def"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:text="@string/agi"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:text="@string/luck"
            android:textSize="25sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/mmName"
        android:layout_width="176dp"
        android:layout_height="51dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/mmJob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/mmJob"
        android:layout_width="170dp"
        android:layout_height="52dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/mmState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.825"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/mmState"
        android:layout_width="144dp"
        android:layout_height="32dp"
        android:gravity="center_horizontal"
        android:text="@string/state"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="100dp"
        android:layout_height="231dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/mmHp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/mmMp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/mmStr"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/mmDef"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/mmAgi"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/mmLuck"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="25sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/mmCreate_At"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/deleteDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="削除する"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.868"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/mCreate_At"
        android:layout_width="104dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:gravity="center_horizontal"
        android:text="@string/sakuseibi"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mmCreate_At"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.766"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
